# convex-hull-assignment-intanamel

./: README.md
komgraf_1/: CMakeLists.txt  drawingwidget.cpp  drawingwidget.h  mainwindow.cpp  mainwindow.h
